Set parallelism explicitly to flink